--- a/src/ui/ButtonLoad/ButtonLoad.module.scss
+++ b/src/ui/ButtonLoad/ButtonLoad.module.scss
@@ -1,13 +1,10 @@
-.btn-green, .btn-green:focus {
+.btn-green, .btn-green:focus, .btn-green:disabled {
   color: #fff;
   margin-top: 10px;
   padding: 5px 32px 7px;
   background-color: var(--default-color);
   animation-duration: 5s;
   transition: 0.4s;
-  &:focus {
-    background-color: var(--default-color);
-  }
   &:hover {
     color: #fff;
     background-color: #007bff;
