feat(all): :art: Project Result added all

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,6 +1,9 @@
 .search {
     // border: solid 8px rgba(0, 0, 0, 0.14);
     //   border: 0 solid #e6e6e6;
+    background-color: #fff;
+    padding: 15px 20px;
+    border-radius: 5px;
     border-width: 1px 0;
     > * {
       height: 50px !important;
