--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,12 @@ body {
   }
 }
 
+a {
+  &.active {
+    background-color: transparent !important;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 10px;
   background-color: transparent;
