--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -23,6 +23,10 @@
   }
 }
 .name-categorie {
-  font-size: 32px;
+  font-size: 24px;
   font-weight: 700;
+  .before_text{
+    font-weight: 400;
+    padding-right: 5px;
+  }
 }
