--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -338,7 +338,7 @@
             }
           }
         }
-        .scroll-hidden{
+        .scroll-hidden {
           overflow: hidden !important;
         }
       }
@@ -355,34 +355,17 @@
               font-size: 22px;
               font-weight: 500;
               @media (max-width: 992px) {
-                font-size: 18px;
+                font-size: 16px;
               }
             }
             .sort {
-              #sortForChange {
-                font-weight: 500;
-                &:focus {
-                  box-shadow: 0 0 0 0;
+              .dropdown {
+                .sort-by {
+                  font-size: 16px;
+                  @media (max-width: 992px) {
+                    font-size: 14px;
+                  }
                 }
-                &::after {
-                  content: "↓";
-                  vertical-align: top;
-                }
-              }
-              .my-dropdown-item {
-                &:hover,
-                &:focus {
-                  background-color: transparent !important;
-                }
-                &:active {
-                  color: var(--default-color) !important;
-                  background-color: transparent !important;
-                }
-              }
-            }
-            .dropdown-item {
-              &:focus {
-                background-color: var(--default-color);
               }
             }
           }
@@ -395,64 +378,9 @@
               }
             }
           }
-          .ad {
+          .products {
             margin: 18px 0;
-            border: 1px solid #f3f3f3;
-            .ad-image {
-              position: relative;
-              display: flex;
-              justify-content: center;
-              align-items: flex-start;
-              max-height: 152px;
-              @media (max-width: 992px) {
-                &.item-image {
-                  max-height: inherit;
-                }
-              }
-              &.item-image {
-                overflow: hidden;
-              }
-              img {
-                width: 100%;
-                transition: 0.5s;
-              }
-            }
-            .info {
-              h5 {
-                color: var(--default-color);
-                font-weight: 500;
-                margin-bottom: 5px;
-                span {
-                  color: #a0a0a0;
-                  font-size: 14px;
-                }
-              }
-              padding: 20px;
-              .product-name {
-                display: block;
-                color: #0a0a0a;
-                font-size: 17px;
-              }
-              .product-name:hover {
-                text-decoration: none;
-              }
-              .product-categorie {
-                color: #a0a0a0;
-                font-size: 14px;
-                font-weight: 400;
-                a {
-                  display: inline-block;
-                  font-size: 14px;
-                  font-weight: 400;
-                  color: #a0a0a0;
-                  text-decoration: none;
-                  transition: 0.3s;
-                }
-                a:hover {
-                  color: var(--default-color);
-                }
-              }
-            }
+            // border: 1px solid #f3f3f3;
             // .verified,
             // &.verified {
             //   &::before {
