--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -40,6 +40,7 @@
       }
     }
     .input-react-select {
+      z-index: 4;
       .css-1s2u09g-control,
       .css-1pahdxg-control,
       >div:nth-child(3) {
