refactor(Cart & Order Page): :lipstick: change style buttons

--- a/src/pages/Profile/Cart/Cart.module.scss
+++ b/src/pages/Profile/Cart/Cart.module.scss
@@ -30,12 +30,12 @@
 }
 
 .order_button{
-  width: 100%;
-  font-size: 18px;
-  font-weight: 500;
-  border-radius: 5px;
-  padding-top: 26px;
-  padding-bottom: 26px;
+  width: 100% !important;
+  font-size: 18px !important;
+  font-weight: 500 !important;
+  border-radius: 5px !important;
+  padding-top: 26px !important;
+  padding-bottom: 26px !important;
 }
 
 .banner {
