--- a/src/pages/OrderPage/OrderPage.module.scss
+++ b/src/pages/OrderPage/OrderPage.module.scss
@@ -38,7 +38,7 @@
     padding: 30px 20px 10px;
 }
   .order_button{
-    width: 100%;
-    font-size: 18px;
-    font-weight: 500;
+    width: 100% !important;
+    font-size: 18px !important;
+    font-weight: 500 !important;
   }
